# worldcup-website

./: .gitignore  Pipfile  README.md  db.sqlite3  pyproject.toml  redirecter_https.py
accounts/: models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
games/: admin.py  leagues.py  models.py  urls.py  views.py
games/migrations/: 0001_initial.py  0002_auto_20171111_1200.py  0003_auto_20171111_1208.py  0004_auto_20171111_1728.py  0005_auto_20171111_1614.py  0006_auto_20171111_1616.py  0007_auto_20171113_1821.py  0008_auto_20171115_1354.py  0009_auto_20171115_1354.py  0010_auto_20171115_1356.py  0011_auto_20171115_1356.py  0012_auto_20171115_1357.py  0013_auto_20171115_1357.py  0014_auto_20171115_1357.py  0015_auto_20171115_1357.py  0016_auto_20171207_1444.py  0017_auto_20171207_1445.py  0018_result_committed.py  0019_auto_20171207_1558.py  0020_auto_20171207_1610.py  0021_auto_20171207_1611.py  0022_auto_20171207_1801.py  0023_team_flag.py  0024_auto_20171208_0915.py  0025_auto_20171208_1328.py  0026_auto_20171208_1345.py  0027_auto_20171208_1416.py  0028_auto_20171208_1605.py  0029_auto_20171208_1707.py  0030_auto_20171208_1720.py  0031_auto_20171211_1945.py  0032_auto_20171211_2024.py  0033_team_name_pt.py  0034_auto_20180328_1939.py
games/templates/: games.html  index.html
mysite/: settings.py  urls.py
mysite/middleware/: superuser.py
mysite/static/: style.css  style1.css  style2.css  style_add.css  style_nao_usado.css  style_old.css
polls/: urls.py  views.py
slider/: slider-marco1.html  style4.css
templates/: base.html
(+34 files in other folders)
