[tool.poetry]
name = "worldcup-project"
version = "0.1.0"
description = ""
authors = ["Marco Inacio <pythonpackages@marcoinacio.com>"]

[tool.poetry.dependencies]
python = "^3.10"
django = ">=1.11.7"
gunicorn = "*"
psycopg2 = "*"
dj-database-url = "*"
whitenoise = "*"
social-auth-app-django = "*"
requests = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
